# prometheus-test

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  Final-Optimization-Checklist.md  Final-Productization-Checklist.md  LICENSE  README.md  launch-session.bat  launch-session.ps1  pyproject.toml  requirements-dev.txt  session-summary-2026-05-30.txt  session-summary-2026-05-31.txt  session-summary-2026-06-01.txt  session-summary-2026-06-08.txt
.claude/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/instructions/: docs.instructions.md  scripts.instructions.md
.github/workflows/: quality-gates.yml
art-direction/: README.md  character-prompt-templates.md  style-guide.md
art-direction/characters/: DS__heroes_main_DashaPavlov.md  DS__heroes_main_MartyMendoza.md  DS__heroes_main_MitchellSimmons.md  DS__heroes_main_RenZhao.md  DS__heroes_main_TonyMendoza.md  DS__neutral_extras_scientists.md  DS__villians_antagonist_DrGaroussen.md  DS__villians_extras_darkagents.md  Marty_Splash_prop1.md
art-direction/comic-prototype/: README.md
art-direction/templates/: art-direction-note-template.md
characters/: README.md
characters/profiles/: chandra-kalam.md  dasha-pavlov.md  dr-garoussen.md  dr-maria-mendoza.md  helen-ai.md  marty-mendoza.md  mitchell-simmons.md  ren-zhao.md  supreme-leader.md  the-bad-ai.md  tony-mendoza.md
characters/templates/: character-profile-template.md
config/: README.md
config/precommit_store/: README.md  bandit.json  checklist-structure.json  interrogate.json  pylint.json  pylint_failures.json  unicode-escapes.json
context/: README.md  project_docstrings_catalog.json
context/prompts/: README.md  checklist_audit_prompt.md  pr_evidence_packaging_prompt.md  quality_remediation_prompt.md  repo_audit_prompt.md  template_bootstrap_prompt.md
context/recipes/: checklist_audit_session.md  documentation_parity_audit_session.md  pr_evidence_packaging_session.md  quality_remediation_session.md  release_prep_session.md
context/task_recipes/: README.md  checklist_audit.json  quality_remediation.json  schema.json
create/: README.md  chapter-tracker.md
create/outlines/: DROIDSCOUTS REWORKS.docx  ch05-outline.md
create/scripts/: ch01-script.md  ch02-script.md  ch03-script.md  ch04-script.md
create/templates/: chapter-outline-template.md  chapter-script-template.md
docs/: README.md  context_trigger_matrix.md  creative_asset_formats.md  generated_artifact_contracts.md  new_user_onboarding.md  ownership_map.md  prometheus-framework-report.md  release_notes.md  runtime_target_support_matrix.md  security_hygiene.md  source_boundary_manifest.md  task_recipe_schema.md  template_customization_checklist.md  troubleshooting.md
docs/agent_bootstrap/: README.md  operator_context_injection.md
docs/examples/: README.md  bad_checklist_entry.md  bad_evidence_packaging.md  good_checklist_entry.md  good_friction_entry.md  good_summary_block_usage.md
legal/: authorship-inventory.md  co-authorship-agreement-template.md  copyright-registration-strategy.md
pitch/: README.md  teaser-trailer-reference.md
pitch/pitch-deck/: onepagepitchDS.pptx
scripts/: README.md  __init__.py  _automation_shared.py  aggregate_project_docstrings.py  audit_docstrings.py  check_checklist_structure.py  check_conflicts.py  check_unicode_escapes.py  manual_hook_warning.py  pdf_to_markdown.py  precommit_filter.py  pytest_guard.py  run_precommit_suite.py  run_tests.py  toml_compat.py
scripts/test_profiles/: README.md
skills/: README.md
skills/checklist-audit/: SKILL.md
skills/documentation-parity-audit/: SKILL.md
skills/quality-remediation/: SKILL.md
skills/template-bootstrap/: SKILL.md
tests/: README.md  conftest.py  test_aggregate_project_docstrings.py  test_audit_docstrings.py  test_check_checklist_structure.py  test_check_unicode_escapes.py  test_manual_hook_warning.py  test_precommit_filter.py  test_pytest_guard.py  test_run_tests.py
world/: README.md  canon-policy.md
(+44 files in other folders)
